# CollapseScanner

./: .gitignore  Cargo.toml  README.md  database.py  main.py  scanner.py
.github/workflows/: rust.yml  static.yml
assets/: custom_styles.css
site/: index.html  styles.css
src/: config.rs  constants.rs  detection.rs  errors.rs  filters.rs  main.rs  output.rs  parser.rs  rules.rs  types.rs  utils.rs  web.rs
src/cache/: mod.rs
src/config/: mod.rs  system.rs
src/output/: mod.rs
src/parsers/: class_parser.rs  mod.rs
src/scanner/: api_analyzer.rs  class.rs  jar.rs  path.rs  scan.rs
web/: index.html
