[package]
name = "collapsescanner"
version = "1.0.3"
edition = "2021"
authors = ["dest4590"]
default-run = "collapsescanner"

# [[bin]]
# name = "remapper"
# path = "scripts/remapper.rs"

[dependencies]
regex = "1.12.3"
zip = "8.6.0"
byteorder = "1.5.0"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rayon = "1.12.0"
colored = { version = "3.1.1" }
clap = { version = "4.6.1", features = ["derive"] }
once_cell = "1.21.4"
indicatif = "0.18.4"
toml = "1.1.2"
mime = { version = "0.3.17", optional = true }
futures-util = { version = "0.3", optional = true }
actix-rt = { version = "2", optional = true }
actix-web = { version = "4.13.0", optional = true }
actix-multipart = { version = "0.7.2", optional = true }

[features]
default = ["web-ui"]
web-ui = ["actix-web", "actix-multipart", "actix-rt", "futures-util", "mime"]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
