[package]
name = "collapsescanner"
version = "1.0.3"
edition = "2021"
authors = ["dest4590"]
default-run = "collapsescanner"

[[bin]]
name = "remapper"
path = "scripts/remapper.rs"

[dependencies]
regex = "1.12.4"
zip = "8.6.0"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rayon = "1.12.0"
colored = { version = "3.1.1" }
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.6"
toml = "1.1.2"
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
